--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
+	},
+	"dependencies": {
+		"colorthief": "^2.6.0",
+		"gray-matter": "^4.0.3"
 	}
 }
