--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
+		"@mollie/api-client": "^4.1.0",
 		"colorthief": "^2.6.0",
 		"gray-matter": "^4.0.3"
 	}
