--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.0.5"
+    "astro": "^5.0.5",
+    "astro-typst": "^0.7.0-beta.1"
+  },
+  "devDependencies": {
+    "@types/node": "^22.10.2"
   }
 }
