--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.7.4",
-    "astro-typst": "^0.7.0-beta.1"
-  },
-  "devDependencies": {
-    "@types/node": "^22.10.2"
+    "@astrojs/netlify": "^6.3.2",
+    "@astrojs/sitemap": "^3.3.1",
+    "astro": "^5.7.10",
+    "astro-typst": "^0.8.1"
   }
 }
