--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,11 @@ command = """
   # Clone your package repository
   git clone https://github.com/syrkis/lilka.git ~/.local/share/typst/packages/local/lilka/0.0.0/
 
+  # Download s3 files
+  echo pwd
+  echo ls
+  git clone https://github.com/syrkis/s3.git ./slides/s3
+
   # Run your regular build command
   npm run build
 """
