--- a/netlify.toml
+++ b/netlify.toml
@@ -6,7 +6,7 @@ command = """
   # Clone your package repository
   git clone https://github.com/syrkis/lilka.git ~/.local/share/typst/packages/local/lilka/0.0.0/
 
-  # Download s3 files
+  # Download s3 images (for typst as it does not support remote url)
   git clone https://github.com/syrkis/s3.git /opt/build/repo/slides/s3
 
   # Run your regular build command
