--- a/netlify.toml
+++ b/netlify.toml
@@ -2,9 +2,10 @@
 command = """
   # Create Typst packages directory structure
   mkdir -p ~/.local/share/typst/packages/local/lilka/0.0.0/
+  mkdir -p ~/.local/share/typst/packages/local/esch/0.0.0/
 
   # Clone your package repository
-  git clone https://github.com/syrkis/lilka.git ~/.local/share/typst/packages/local/lilka/0.0.0/
+  git clone https://github.com/syrkis/esch.git ~/.local/share/typst/packages/local/esch/0.0.0/
 
   # Download s3 images (for typst as it does not support remote url)
   git clone https://github.com/syrkis/s3.git /opt/build/repo/slides/s3
