--- a/netlify.toml
+++ b/netlify.toml
@@ -1,17 +1,22 @@
 [build]
 command = """
-  # Create Typst packages directory structure
-  mkdir -p ~/.local/share/typst/packages/local/lilka/0.0.0/
-  mkdir -p ~/.local/share/typst/packages/local/esch/0.0.0/
+    # Create Typst packages directory structure
+    mkdir -p ~/.local/share/typst/packages/local/lilka/0.0.0/
+    mkdir -p ~/.local/share/typst/packages/local/esch/0.0.0/
 
-  # Clone your package repository
-  git clone https://github.com/syrkis/lilka.git ~/.local/share/typst/packages/local/lilka/0.0.0/
-  git clone https://github.com/syrkis/esch.git ~/.local/share/typst/packages/local/esch/0.0.0/
+    # Clone your package repository
+    git clone https://github.com/syrkis/lilka.git ~/.local/share/typst/packages/local/lilka/0.0.0/
+    git clone https://github.com/syrkis/esch.git ~/.local/share/typst/packages/local/esch/0.0.0/
 
-  # Download s3 images (for typst as it does not support remote url)
-  git clone https://github.com/syrkis/s3.git /opt/build/repo/slides/s3
+    # Download s3 images (for typst as it does not support remote url)
+    rm -rf /opt/build/repo/slides/s3
+    if [ -d "/opt/build/repo/slides/s3" ]; then
+      git -C /opt/build/repo/slides/s3 pull
+    else
+      git clone https://github.com/syrkis/s3.git /opt/build/repo/slides/s3
+    fi
 
-  # Run your regular build command
-  npm run build
+    # Run your regular build command
+    npm run build
 """
 publish = "dist"
