--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "syrkis.new",
+  "name": "syrkis.com",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -9,10 +9,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/netlify": "^6.5.3",
-    "@astrojs/sitemap": "^3.4.2",
-    "astro": "^5.12.5",
-    "astro-typst": "^0.8.2",
+    "@astrojs/netlify": "^6.5.9",
+    "@astrojs/sitemap": "^3.5.1",
+    "@myriaddreamin/typst-ts-node-compiler": "^0.6.1-rc2",
+    "@myriaddreamin/typst-ts-renderer": "^0.6.1-rc2",
+    "@myriaddreamin/typst.ts": "^0.6.1-rc2",
+    "astro": "^5.13.5",
+    "astro-typst": "^0.12.1",
     "netlify-cli": "^23.0.0"
   }
 }
