--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^6.5.10",
     "@astrojs/node": "^9.4.3",
     "@astrojs/sitemap": "^3.5.1",
     "@myriaddreamin/typst-ts-node-compiler": "^0.6.1-rc2",
