--- a/src/content/works/aurelian.yaml
+++ b/src/content/works/aurelian.yaml
@@ -1,6 +1,6 @@
 title: Aurelian
 desc: The Aurelian Textures is a collection of images of butterfly wings captured through a microscopic lens
-cover: aurelian-1.jpg
+cover: /src/assets/art/aurelian/aurelian-1.jpg
 year: "2016"
 material: Microscopy Photograph of Butterfly Wings
 works:
