--- a/src/content/works/bciioi.yaml
+++ b/src/content/works/bciioi.yaml
@@ -1,6 +1,6 @@
 title: BCIIOI
 desc: BCIIOI is a series of images of etched nano wires (potential uses include single neuron interfacing) captured through a microscope lens
-cover: bciioi-5.jpg
+cover: /src/assets/art/bciioi/bciioi-1.jpg
 year: "2015"
 material: Archival of Microscopy Photograph of Etched Nano Wires
 works:
