--- a/src/content/works/rhos.yaml
+++ b/src/content/works/rhos.yaml
@@ -1,6 +1,6 @@
 title: RHOS
 desc: RHOS is a computer generated collection of derivatives of derivatives ... of ... of derivatives of rotating Gaussians
-cover: rhos-1.jpg
+cover: /src/assets/art/rhos/rhos-1.jpg
 year: "2023"
 material: Procedurally Generated Motif on Fine Art Cotton Rag Paper
 works:
