--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@myriaddreamin/typst-ts-renderer": "^0.6.1-rc2",
     "@myriaddreamin/typst.ts": "^0.6.1-rc2",
     "astro": "^5.13.8",
-    "astro-typst": "^0.12.1"
+    "astro-typst": "^0.12.1",
+    "date-fns": "^4.1.0"
   }
 }
